# CheckersV2

./: README.md  main.py  pyproject.toml
src/mycheckers/: DrawPieces.py  __init__.py  __main__.py  configure_screen.py  configure_size.py  draw_board.py  draw_pieces.py  game.py  initial_board.py  move_piece.py  valid_moves.py
