[project]
name = "mycheckers"
dynamic = ["version"]
authors = [
  { name="UltraProcessor", email="191808663+UltraProcessor@users.noreply.github.com" },
]
description = "Alternative solution for checkers game"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "libcomponent>=0.0.5",
    "pygame>=2.6.1",
    "trio>=0.32.0",
]

[tool.setuptools.dynamic]
version = {attr = "mycheckers.__init__.__version__"}

[project.urls]
"Source" = "https://github.com/UltraProcessor/CheckersV2"
"Bug Tracker" = "https://github.com/UltraProcessor/CheckersV2/issues"

[project.gui-scripts]
my_checkers_game = "mycheckers:main"

[project.optional-dependencies]
tools = [
    "uv>=0.5.21",
    "mypy>=1.19.0",
    "ruff>=0.9.2",
    "codespell>=2.3.0",
    "pre-commit>=4.2.0",
    "attrs>=25.3.0",
]

[tool.setuptools.package-data]
checkers = ["py.typed"]

[tool.uv]
package = true

[tool.mypy]
files = [
    "src/mycheckers/",
]
enable_error_code = [
    "truthy-bool",
    "mutable-override",
    "exhaustive-match",
]
show_column_numbers = true
show_error_codes = true
show_traceback = true
disallow_any_decorated = true
disallow_any_unimported = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
strict = true
warn_unreachable = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "D",     # pydocstyle
    "E",     # Error
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "R",     # Refactor
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # Warning
    "YTT",   # flake8-2020
]
extend-ignore = [
    "D203",   # one-blank-line-before-class
    "D204",   # one-blank-line-after-class
    "D211",   # no-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "D417",   # undocumented-param "Missing argument descriptions"
    "E501",   # line-too-long
    "PYI041", # redundant-numeric-union
    "S101",   # assert (use of assert for tests and type narrowing)
    "SIM117", # multiple-with-statements
]
